# decyphr_project

./: .gitignore  Decyphr_Stage1_Presentation.pptx  LICENSE  MANIFEST.in  README.md  analysis_log.txt  analysis_log_dq.txt  analysis_log_dq_debug.txt  analysis_log_fix.txt  analysis_log_fix_final.txt  analysis_log_fix_final_v2.txt  analysis_log_fix_final_v3.txt  analysis_log_v2.txt  analyze.py  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_exec.txt  debug_output_new.txt  fix_template.py  generate_stage1_ppt.py  generate_telco_data.py  pyproject.toml  sample_data.csv  telco_customer_churn.csv
1_Project_Configuration/: LICENSE  git_ignore.txt
1_Project_Configuration/github_actions/: python_testing_workflow.yml
3_Source_Code/decyphr/: main_orchestrator.py
3_Source_Code/decyphr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
3_Source_Code/decyphr/analysis_plugins/p01_overview/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p02_univariate/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p04_advanced_outliers/: create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p05_missing_values/: create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p06_correlations/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p07_interactions/: __init__.py
3_Source_Code/decyphr/analysis_plugins/p08_hypothesis_testing/: __init__.py
3_Source_Code/decyphr/analysis_plugins/p09_pca/: __init__.py  create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p10_clustering/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p11_target_analysis/: __init__.py  create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p12_explainability_shap/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p14_deep_text_analysis/: create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p15_timeseries/: __init__.py  create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p16_geospatial/: __init__.py  create_visualization.py
3_Source_Code/decyphr/analysis_plugins/p17_business_insights/: __init__.py  create_visualization.py  run_analysis.py
3_Source_Code/decyphr/analysis_plugins/p18_decision_engine/: create_visualization.py  run_analysis.py
3_Source_Code/decyphr/backends/: dask_backend.py
3_Source_Code/decyphr/report_builder/: builder.py
3_Source_Code/decyphr/report_builder/templates/: base_layout.html  base_layout_v2.html  base_layout_v2.jinja2  business_executive_summary.html
3_Source_Code/decyphr/utils/: confidence.py  plotting.py
4_Testing/: test_suite.py
Reports/: Report_1.html  Report_10.html  Report_100.html  Report_101.html  Report_102.html  Report_103.html  Report_104.html  Report_105.html  Report_106.html  Report_107.html  Report_108.html  Report_11.html  Report_12.html  Report_13.html  Report_14.html  Report_15.html  Report_16.html  Report_17.html  Report_18.html  Report_19.html  Report_2.html  Report_20.html  Report_21.html  Report_22.html  Report_23.html  Report_24.html  Report_25.html  Report_26.html  Report_27.html  Report_28.html  Report_29.html  Report_3.html  Report_30.html  Report_31.html  Report_32.html  Report_33.html  Report_34.html  Report_35.html  Report_36.html  Report_37.html  (+98 more)
decyphr/: __init__.py  main_orchestrator.py
decyphr/analysis_plugins/p03_data_quality/: __init__.py  create_visualization.py  run_analysis.py
decyphr/analysis_plugins/p04_advanced_outliers/: __init__.py  run_analysis.py
decyphr/analysis_plugins/p05_missing_values/: __init__.py  create_visualization.py  run_analysis.py
decyphr/analysis_plugins/p06_correlations/: __init__.py
decyphr/analysis_plugins/p07_interactions/: run_analysis.py
decyphr/analysis_plugins/p08_hypothesis_testing/: run_analysis.py
decyphr/analysis_plugins/p09_pca/: run_analysis.py
decyphr/analysis_plugins/p10_clustering/: __init__.py
decyphr/analysis_plugins/p11_target_analysis/: create_visualization.py  run_analysis.py
decyphr/analysis_plugins/p13_data_drift/: __init__.py
decyphr/analysis_plugins/p14_deep_text_analysis/: run_analysis.py
decyphr/analysis_plugins/p15_timeseries/: run_analysis.py
decyphr/analysis_plugins/p17_business_insights/: run_analysis.py
decyphr/analysis_plugins/p18_decision_engine/: run_analysis.py
decyphr/report_builder/assets/styles/: main_theme.css  report_theme.css
examples/: demo_script.py
(+3 files in other folders)
