# ==============================================================================
# Build System Configuration
# ==============================================================================
# Specifies how pip should build your project. This is standard boilerplate.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# Project Metadata
# ==============================================================================
# Defines core information about your library.
[project]
name = "decyphr"
version = "1.1.1"
authors = [
  { name = "Ayush Singh", email = "emailtoayushsingh@gmail.com" },
]
description = "An all-encompassing, automated toolkit for deep Exploratory Data Analysis and reporting."
readme = "README.md"
requires-python = ">=3.9"
# This path now correctly points to the license file within your chosen folder structure.
license = { file = "1_Project_Configuration/LICENSE" } 
keywords = ["eda", "data analysis", "profiling", "visualization", "data science", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]


# ==============================================================================
# Core Dependencies
# ==============================================================================
# Essential packages required for Decyphr to perform basic functionality.
dependencies = [
    # Core & Backend
    "pandas>=2.0.0",
    "dask[dataframe]>=2024.1.0",    # Efficient handling of large datasets
    "numpy>=1.24.0",
    "openpyxl>=3.1.2",              # Required for reading .xlsx Excel files

    # Visualization & Reporting
    "plotly>=5.15.0",               # Interactive visualizations
    "jinja2>=3.1.0",                # Templating engine for HTML reports

    # Core Analysis & Stats
    "scikit-learn>=1.3.0",          # PCA, clustering, outlier models
    "scipy>=1.10.0",                # Statistical testing
    "statsmodels>=0.14.0",          # VIF and statistical modeling
    "phik>=0.12.4",                 # Phik correlation matrix
]




# ==============================================================================
# Optional Dependencies
# ==============================================================================
# Install these as needed, e.g., `pip install "decyphr[text]"`
[project.optional-dependencies]

# Text analysis tools
text = [
    "spacy>=3.7.0",
    "textblob>=0.17.0",
    "gensim>=4.3.0",
]

# Explainable AI tools
xai = [
    "lightgbm>=4.0.0",
    "shap>=0.42.0",
]

# Geospatial visualization tools
geo = [
    "geopandas>=0.14.0",
    "folium>=0.15.0",
]

# A bundle for installing everything
all = [
    "decyphr[text]",
    "decyphr[xai]",
    "decyphr[geo]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"decyphr.report_builder.templates" = ["*.html"]
"decyphr.report_builder.assets.styles" = ["*.css"]
"decyphr.report_builder.assets.scripts" = ["*.js"]

# ==============================================================================
# Project URLs
# ==============================================================================
# Displayed on the project's PyPI page.
[project.urls]
"Homepage" = "https://github.com/ayushagain/decyphr_project"
"Bug Tracker" = "https://github.com/ayushagain/decyphr_project/issues"
"Documentation" = "https://github.com/ayushagain/decyphr_project#readme"


# ==============================================================================
# TOOL CONFIGURATION - *** THIS IS THE CRUCIAL ADDITION ***
# ==============================================================================
# This section provides configuration for the build tools.
[tool.setuptools.packages.find]
# 'where' tells setuptools to look for packages inside the '3_Source_Code' directory.
# 'include' specifies the package name to be included.
where = ["3_Source_Code"]
include = ["decyphr*"]